--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.95.1
-gradio==4.16.0
+fastapi==0.100.1
+gradio
 gradio_imageslider==0.0.17
-gradio_client==0.8.1
+gradio_client
 Markdown==3.4.1
 numpy==1.24.2
 requests==2.28.2
@@ -20,7 +20,7 @@ einops==0.7.0
 einops-exts==0.0.4
 timm==0.9.8
 openai-clip==1.0.1
-fsspec==2023.4.0
+fsspec
 kornia==0.6.9
 matplotlib==3.7.1
 ninja==1.11.1
